feat: port Visual Creative Tab Editor to 1.20.1