@@ -6,8 +6,10 @@ import com.kltyton.visual_creative_tab_editor.data.CreativeTabLayout;
 import com.kltyton.visual_creative_tab_editor.data.CreativeTabPatch;
 import com.kltyton.visual_creative_tab_editor.data.CreativeTabType;
 import com.kltyton.visual_creative_tab_editor.data.CreativeTabValidation;
+import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
-import net.minecraft.resources.Identifier;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.ItemStackLinkedSet;
 
@@ -15,8 +17,10 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.NavigableSet;
 import java.util.Objects;
 import java.util.Optional;
@@ -32,9 +36,14 @@ public final class CreativeTabDraft {
     public static final String CUSTOM_NAMESPACE = "visual_creative_tab_editor";
 
     private final List<CreativeTabDefinition> tabs = new ArrayList<>();
-    private final LinkedHashSet<Identifier> selectedTabIds = new LinkedHashSet<>();
+    private final LinkedHashSet<ResourceLocation> selectedTabIds = new LinkedHashSet<>();
     private final NavigableSet<Integer> selectedItemIndices = new TreeSet<>();
-    private Identifier currentTabId;
+    private final List<ItemStack> currentSearchItems = new ArrayList<>();
+    private final Map<Item, Map<CompoundTag, Integer>> currentSearchItemIndices = new HashMap<>();
+    private ResourceLocation currentTabId;
+    private CreativeTabType currentTabType = CreativeTabType.CATEGORY;
+    private int currentSearchPreferenceCapacity;
+    private boolean currentSearchItemsPrepared;
 
     /** Creates a deep editing copy of {@code catalog}. */
     public CreativeTabDraft(CreativeTabCatalog catalog) {
@@ -47,7 +56,10 @@ public final class CreativeTabDraft {
                 .filter(definition -> definition.type() == CreativeTabType.CATEGORY && !definition.hidden())
                 .map(CreativeTabDefinition::id)
                 .findFirst()
-                .orElseGet(() -> this.tabs.isEmpty() ? null : this.tabs.getFirst().id());
+                .orElseGet(() -> this.tabs.isEmpty() ? null : this.tabs.get(0).id());
+        if (this.currentTabId != null) {
+            this.currentTabType = this.tabs.get(requireTabIndex(this.currentTabId)).type();
+        }
     }
 
     public static CreativeTabDraft fromCatalog(CreativeTabCatalog catalog) {
@@ -63,12 +75,12 @@ public final class CreativeTabDraft {
         return List.copyOf(copies);
     }
 
-    public Optional<CreativeTabDefinition> definition(Identifier id) {
+    public Optional<CreativeTabDefinition> definition(ResourceLocation id) {
         int index = indexOf(requireId(id));
         return index < 0 ? Optional.empty() : Optional.of(copyDefinition(this.tabs.get(index), index));
     }
 
-    public Optional<Identifier> currentTabId() {
+    public Optional<ResourceLocation> currentTabId() {
         return Optional.ofNullable(this.currentTabId);
     }
 
@@ -76,21 +88,26 @@ public final class CreativeTabDraft {
         return this.currentTabId == null ? Optional.empty() : definition(this.currentTabId);
     }
 
-    /** Changes the item-editing target and clears index-based item selection. */
-    public void setCurrentTab(Identifier id) {
-        Identifier checked = requireExistingId(id);
-        if (!checked.equals(this.currentTabId)) {
-            this.currentTabId = checked;
-            this.selectedItemIndices.clear();
-        }
+    /** Returns the current type without copying the definition or its stacks. */
+    public CreativeTabType currentTabType() {
+        return this.currentTabType;
     }
 
-    public Set<Identifier> selectedTabIds() {
+    /** Changes the item-editing target and clears index-based item selection. */
+    public void setCurrentTab(ResourceLocation id) {
+        switchCurrentTab(requireExistingId(id));
+    }
+
+    public Set<ResourceLocation> selectedTabIds() {
         return Collections.unmodifiableSet(new LinkedHashSet<>(this.selectedTabIds));
     }
 
-    public void setTabSelected(Identifier id, boolean selected) {
-        Identifier checked = requireExistingId(id);
+    public boolean isTabSelected(ResourceLocation id) {
+        return this.selectedTabIds.contains(requireId(id));
+    }
+
+    public void setTabSelected(ResourceLocation id, boolean selected) {
+        ResourceLocation checked = requireExistingId(id);
         if (selected) {
             this.selectedTabIds.add(checked);
         } else {
@@ -99,8 +116,8 @@ public final class CreativeTabDraft {
     }
 
     /** Toggles an id-based tab selection and returns its new state. */
-    public boolean toggleTabSelection(Identifier id) {
-        Identifier checked = requireExistingId(id);
+    public boolean toggleTabSelection(ResourceLocation id) {
+        ResourceLocation checked = requireExistingId(id);
         if (this.selectedTabIds.remove(checked)) {
             return false;
         }
@@ -121,10 +138,10 @@ public final class CreativeTabDraft {
     }
 
     /** Moves the supplied tab ids as one block while preserving their old order. */
-    public void moveTabs(Collection<Identifier> ids, int targetIndex) {
+    public void moveTabs(Collection<ResourceLocation> ids, int targetIndex) {
         Objects.requireNonNull(ids, "ids");
         checkInsertionIndex(targetIndex, this.tabs.size(), "tab target index");
-        Set<Identifier> movingIds = checkedIds(ids);
+        Set<ResourceLocation> movingIds = checkedIds(ids);
         if (movingIds.isEmpty()) {
             return;
         }
@@ -145,36 +162,103 @@ public final class CreativeTabDraft {
         }
         int insertionIndex = targetIndex - removedBeforeTarget;
         remaining.addAll(insertionIndex, moving);
+        boolean changed = false;
+        for (int index = 0; index < this.tabs.size(); index++) {
+            if (!this.tabs.get(index).id().equals(remaining.get(index).id())) {
+                changed = true;
+                break;
+            }
+        }
+        if (!changed) {
+            return;
+        }
         this.tabs.clear();
         this.tabs.addAll(remaining);
+        if (this.currentTabType == CreativeTabType.SEARCH) {
+            this.selectedItemIndices.clear();
+            invalidatePreparedSearchItems();
+        }
     }
 
     public void setSelectedTabsHidden(boolean hidden) {
         setTabsHidden(this.selectedTabIds, hidden);
     }
 
-    public void setTabsHidden(Collection<Identifier> ids, boolean hidden) {
-        Set<Identifier> checked = checkedIds(ids);
+    public void setTabsHidden(Collection<ResourceLocation> ids, boolean hidden) {
+        Set<ResourceLocation> checked = checkedIds(ids);
+        boolean changed = false;
         for (int index = 0; index < this.tabs.size(); index++) {
             CreativeTabDefinition definition = this.tabs.get(index);
             if (checked.contains(definition.id()) && definition.hidden() != hidden) {
                 this.tabs.set(index, withHidden(definition, hidden));
+                changed = true;
             }
+        }
+        if (changed && this.currentTabType == CreativeTabType.SEARCH) {
+            this.selectedItemIndices.clear();
+            invalidatePreparedSearchItems();
         }
     }
 
-    /** Returns defensive count-one copies of the current category's items. */
+    /** Returns defensive count-one copies of the current reorderable tab's items. */
     public List<ItemStack> currentItems() {
-        return copyStacks(requireEditableCategory().items());
+        CreativeTabDefinition definition = requireReorderableItemsTab();
+        if (definition.type() == CreativeTabType.SEARCH && this.currentSearchItemsPrepared) {
+            return copyStacks(this.currentSearchItems);
+        }
+        return copyStacks(definition.items());
+    }
+
+    /** Returns the current visible working-list size without copying its stacks. */
+    public int currentItemCount() {
+        CreativeTabDefinition definition = requireCurrentTab();
+        if (definition.type() == CreativeTabType.SEARCH && this.currentSearchItemsPrepared) {
+            return this.currentSearchItems.size();
+        }
+        return definition.items().size();
+    }
+
+    public int currentSearchItemCount() {
+        return requireCurrentTab().searchItems().size();
+    }
+
+    /** Returns one defensive stack copy without copying the complete current list. */
+    public ItemStack currentItemAt(int index) {
+        CreativeTabDefinition definition = requireCurrentTab();
+        List<ItemStack> items = definition.type() == CreativeTabType.SEARCH && this.currentSearchItemsPrepared
+                ? this.currentSearchItems
+                : definition.items();
+        return index >= 0 && index < items.size() ? normalizeStack(items.get(index)) : ItemStack.EMPTY;
+    }
+
+    /** Finds an equal current stack without materializing a defensive list copy. */
+    public int indexOfMatchingCurrentItem(ItemStack target, int excludedIndex) {
+        if (target == null || target.isEmpty()) {
+            return -1;
+        }
+        CreativeTabDefinition definition = requireCurrentTab();
+        List<ItemStack> items = definition.type() == CreativeTabType.SEARCH && this.currentSearchItemsPrepared
+                ? this.currentSearchItems
+                : definition.items();
+        for (int index = 0; index < items.size(); index++) {
+            if (index != excludedIndex && ItemStack.isSameItemSameTags(items.get(index), target)) {
+                return index;
+            }
+        }
+        return -1;
     }
 
     public Set<Integer> selectedItemIndices() {
         return Collections.unmodifiableSet(new TreeSet<>(this.selectedItemIndices));
     }
 
+    public boolean isItemSelected(int index) {
+        return this.selectedItemIndices.contains(index);
+    }
+
     public void setItemSelected(int index, boolean selected) {
-        CreativeTabDefinition definition = requireEditableCategory();
-        checkElementIndex(index, definition.items().size(), "item index");
+        CreativeTabDefinition definition = requireReorderableItemsTab();
+        checkElementIndex(index, reorderableItems(definition).size(), "item index");
         if (selected) {
             this.selectedItemIndices.add(index);
         } else {
@@ -184,8 +268,8 @@ public final class CreativeTabDraft {
 
     /** Toggles an index-based item selection and returns its new state. */
     public boolean toggleItemSelection(int index) {
-        CreativeTabDefinition definition = requireEditableCategory();
-        checkElementIndex(index, definition.items().size(), "item index");
+        CreativeTabDefinition definition = requireReorderableItemsTab();
+        checkElementIndex(index, reorderableItems(definition).size(), "item index");
         if (this.selectedItemIndices.remove(index)) {
             return false;
         }
@@ -201,8 +285,8 @@ public final class CreativeTabDraft {
      * Moves selected items as one stable block. {@code targetIndex} is a slot in
      * the pre-move item list: {@code 0} is the start and {@code size()} is the end.
      */
-    public void moveSelectedItems(int targetIndex) {
-        moveItems(this.selectedItemIndices, targetIndex);
+    public boolean moveSelectedItems(int targetIndex) {
+        return moveItems(this.selectedItemIndices, targetIndex);
     }
 
     /**
@@ -212,9 +296,9 @@ public final class CreativeTabDraft {
      * @return the number of items moved, or {@code -1} when the target tab
      *         cannot accept the block without exceeding a per-list limit
      */
-    public int moveSelectedItemsToTab(Identifier targetTabId) {
+    public int moveSelectedItemsToTab(ResourceLocation targetTabId) {
         CreativeTabDefinition source = requireEditableCategory();
-        Identifier checkedTargetId = requireExistingId(targetTabId);
+        ResourceLocation checkedTargetId = requireExistingId(targetTabId);
         if (source.id().equals(checkedTargetId)) {
             return 0;
         }
@@ -274,20 +358,27 @@ public final class CreativeTabDraft {
         int targetTabIndex = requireTabIndex(target.id());
         this.tabs.set(sourceTabIndex, updatedSource);
         this.tabs.set(targetTabIndex, updatedTarget);
-        this.currentTabId = checkedTargetId;
+        switchCurrentTab(checkedTargetId);
         selectContiguousItems(insertionIndex, moving.size());
         return moving.size();
     }
 
     /** Moves the supplied stable indices as one block in their original order. */
-    public void moveItems(Collection<Integer> indices, int targetIndex) {
+    public boolean moveItems(Collection<Integer> indices, int targetIndex) {
         Objects.requireNonNull(indices, "indices");
-        CreativeTabDefinition definition = requireEditableCategory();
-        List<ItemStack> items = new ArrayList<>(definition.items());
+        CreativeTabDefinition definition = requireReorderableItemsTab();
+        List<ItemStack> items = new ArrayList<>(reorderableItems(definition));
         checkInsertionIndex(targetIndex, items.size(), "item target index");
         NavigableSet<Integer> movingIndices = checkedItemIndices(indices, items.size());
         if (movingIndices.isEmpty()) {
-            return;
+            return true;
+        }
+        if (definition.type() == CreativeTabType.SEARCH) {
+            int preferenceCapacity = this.currentSearchPreferenceCapacity;
+            if (targetIndex > preferenceCapacity
+                    || movingIndices.stream().anyMatch(index -> index >= preferenceCapacity)) {
+                return false;
+            }
         }
 
         List<ItemStack> moving = new ArrayList<>(movingIndices.size());
@@ -305,8 +396,18 @@ public final class CreativeTabDraft {
         }
         int insertionIndex = targetIndex - removedBeforeTarget;
         remaining.addAll(insertionIndex, moving);
-        replaceCurrentItems(definition, remaining);
+        if (sameStackOrder(items, remaining)) {
+            selectContiguousItems(insertionIndex, moving.size());
+            return true;
+        }
+        if (definition.type() == CreativeTabType.SEARCH) {
+            replacePreparedSearchItems(remaining);
+            replaceCurrentItems(definition, searchPreference(definition, this.currentSearchItems));
+        } else {
+            replaceCurrentItems(definition, remaining);
+        }
         selectContiguousItems(insertionIndex, moving.size());
+        return true;
     }
 
     /** Deletes selected items and returns the number removed. */
@@ -465,15 +566,49 @@ public final class CreativeTabDraft {
             items.add(normalizeStack(stack));
         }
         items.sort(Objects.requireNonNull(comparator, "comparator"));
-        replaceCurrentItems(definition, items);
+        replacePreparedSearchItems(items);
+        replaceCurrentItems(definition, searchPreference(definition, this.currentSearchItems));
         this.selectedItemIndices.clear();
+    }
+
+    /**
+     * Prepares the dynamic search display for index-based selection without
+     * changing the persisted search preference.
+     */
+    public void prepareCurrentSearchItems(Collection<ItemStack> currentSearchItems) {
+        Objects.requireNonNull(currentSearchItems, "currentSearchItems");
+        CreativeTabDefinition definition = requireCurrentTab();
+        if (definition.type() != CreativeTabType.SEARCH) {
+            throw new IllegalStateException("The current tab is not the search tab");
+        }
+        replacePreparedSearchItems(currentSearchItems);
+        this.selectedItemIndices.clear();
+    }
+
+    public boolean hasPreparedCurrentSearchItems() {
+        return this.currentTabType == CreativeTabType.SEARCH && this.currentSearchItemsPrepared;
+    }
+
+    public int currentSearchPreferenceCapacity() {
+        return this.currentSearchItemsPrepared ? this.currentSearchPreferenceCapacity : 0;
+    }
+
+    /** Returns the prepared search index without copying or scanning the search list. */
+    public int indexOfPreparedSearchItem(ItemStack stack, int maxExclusive) {
+        if (!this.currentSearchItemsPrepared || stack == null || stack.isEmpty() || maxExclusive <= 0) {
+            return -1;
+        }
+        Map<CompoundTag, Integer> byTag = this.currentSearchItemIndices.get(stack.getItem());
+        Integer index = byTag == null ? null : byTag.get(stack.getTag());
+        int limit = Math.min(maxExclusive, this.currentSearchPreferenceCapacity);
+        return index != null && index < limit ? index : -1;
     }
 
     public void setCurrentTabIcon(ItemStack icon) {
         setTabIcon(requireCurrentTab().id(), icon);
     }
 
-    public void setTabIcon(Identifier id, ItemStack icon) {
+    public void setTabIcon(ResourceLocation id, ItemStack icon) {
         int index = requireTabIndex(id);
         CreativeTabDefinition definition = this.tabs.get(index);
         this.tabs.set(index, withIcon(definition, normalizeStack(icon)));
@@ -484,7 +619,7 @@ public final class CreativeTabDraft {
     }
 
     /** Stores user-entered titles as literal components. */
-    public void setTabTitle(Identifier id, String title) {
+    public void setTabTitle(ResourceLocation id, String title) {
         int index = requireTabIndex(id);
         CreativeTabDefinition definition = this.tabs.get(index);
         this.tabs.set(index, withTitle(definition, Component.literal(Objects.requireNonNull(title, "title"))));
@@ -494,16 +629,16 @@ public final class CreativeTabDraft {
      * Adds an empty category whose icon and default literal title come from the
      * selected inventory stack. The generated id is always unique in this draft.
      */
-    public Identifier addCustomCategory(ItemStack selectedStack) {
+    public ResourceLocation addCustomCategory(ItemStack selectedStack) {
         ItemStack icon = normalizeStack(selectedStack);
         return addCustomCategory(icon, icon.getHoverName().getString());
     }
 
-    public Identifier addCustomCategory(ItemStack selectedStack, String title) {
+    public ResourceLocation addCustomCategory(ItemStack selectedStack, String title) {
         ItemStack icon = normalizeStack(selectedStack);
-        Identifier id;
+        ResourceLocation id;
         do {
-            id = Identifier.fromNamespaceAndPath(CUSTOM_NAMESPACE, "custom/" + UUID.randomUUID());
+            id = new ResourceLocation(CUSTOM_NAMESPACE, "custom/" + UUID.randomUUID());
         } while (indexOf(id) >= 0);
 
         CreativeTabDefinition definition = new CreativeTabDefinition(
@@ -519,8 +654,7 @@ public final class CreativeTabDraft {
                 CreativeTabLayout.DEFAULT
         );
         this.tabs.add(definition);
-        this.currentTabId = id;
-        this.selectedItemIndices.clear();
+        switchCurrentTab(id);
         return id;
     }
 
@@ -545,6 +679,139 @@ public final class CreativeTabDraft {
             throw new IllegalStateException("Only category-tab items can be edited");
         }
         return definition;
+    }
+
+    private CreativeTabDefinition requireReorderableItemsTab() {
+        CreativeTabDefinition definition = requireCurrentTab();
+        if (definition.type() != CreativeTabType.CATEGORY && definition.type() != CreativeTabType.SEARCH) {
+            throw new IllegalStateException(
+                    "Items of " + definition.type().serializedName() + " tabs cannot be reordered"
+            );
+        }
+        return definition;
+    }
+
+    private List<ItemStack> reorderableItems(CreativeTabDefinition definition) {
+        if (definition.type() != CreativeTabType.SEARCH) {
+            return definition.items();
+        }
+        if (!this.currentSearchItemsPrepared) {
+            throw new IllegalStateException("The dynamic search order has not been prepared");
+        }
+        return this.currentSearchItems;
+    }
+
+    private int searchVisiblePreferenceCapacity(
+            CreativeTabDefinition definition,
+            List<ItemStack> visibleItems
+    ) {
+        int invisibleCount = invisibleSearchPreferences(definition, visibleItems).size();
+        int capacity = maxSearchPreferenceSize(definition) - invisibleCount;
+        return Math.min(visibleItems.size(), Math.max(0, capacity));
+    }
+
+    private List<ItemStack> searchPreference(
+            CreativeTabDefinition definition,
+            List<ItemStack> orderedVisibleItems
+    ) {
+        List<IndexedSearchPreference> invisible = invisibleSearchPreferences(definition, orderedVisibleItems);
+        int maxPreferenceSize = maxSearchPreferenceSize(definition);
+        int visibleLimit = Math.max(0, maxPreferenceSize - invisible.size());
+        List<ItemStack> preference = new ArrayList<>(Math.min(
+                maxPreferenceSize,
+                orderedVisibleItems.size() + invisible.size()
+        ));
+        for (int index = 0; index < orderedVisibleItems.size() && index < visibleLimit; index++) {
+            preference.add(normalizeStack(orderedVisibleItems.get(index)));
+        }
+        for (IndexedSearchPreference retained : invisible) {
+            int insertionIndex = Math.min(retained.originalIndex(), preference.size());
+            preference.add(insertionIndex, normalizeStack(retained.stack()));
+        }
+        return preference;
+    }
+
+    private static List<IndexedSearchPreference> invisibleSearchPreferences(
+            CreativeTabDefinition definition,
+            List<ItemStack> visibleItems
+    ) {
+        Set<ItemStack> visible = ItemStackLinkedSet.createTypeAndTagSet();
+        visible.addAll(visibleItems);
+        List<IndexedSearchPreference> invisible = new ArrayList<>();
+        for (int index = 0; index < definition.items().size(); index++) {
+            ItemStack preferred = definition.items().get(index);
+            if (!visible.contains(preferred)) {
+                invisible.add(new IndexedSearchPreference(index, normalizeStack(preferred)));
+            }
+        }
+        return invisible;
+    }
+
+    private int maxSearchPreferenceSize(CreativeTabDefinition currentSearch) {
+        long otherItems = 0L;
+        for (CreativeTabDefinition definition : this.tabs) {
+            otherItems += definition.searchItems().size();
+            if (!definition.id().equals(currentSearch.id())) {
+                otherItems += definition.items().size();
+            }
+        }
+        long globalCapacity = CreativeTabValidation.MAX_TOTAL_ITEMS - otherItems;
+        long boundedCapacity = Math.max(0L, Math.min(
+                globalCapacity,
+                (long) CreativeTabValidation.MAX_ITEMS_PER_TAB
+        ));
+        return (int) boundedCapacity;
+    }
+
+    private void replacePreparedSearchItems(Collection<ItemStack> stacks) {
+        this.currentSearchItems.clear();
+        this.currentSearchItemIndices.clear();
+        for (ItemStack stack : stacks) {
+            ItemStack normalized = normalizeStack(stack);
+            Map<CompoundTag, Integer> byTag = this.currentSearchItemIndices.computeIfAbsent(
+                    normalized.getItem(),
+                    ignored -> new HashMap<>()
+            );
+            CompoundTag tag = normalized.getTag();
+            CompoundTag key = tag == null ? null : tag.copy();
+            if (byTag.putIfAbsent(key, this.currentSearchItems.size()) == null) {
+                this.currentSearchItems.add(normalized);
+            }
+        }
+        this.currentSearchPreferenceCapacity = searchVisiblePreferenceCapacity(
+                requireCurrentTab(),
+                this.currentSearchItems
+        );
+        this.currentSearchItemsPrepared = true;
+    }
+
+    private void invalidatePreparedSearchItems() {
+        this.currentSearchItems.clear();
+        this.currentSearchItemIndices.clear();
+        this.currentSearchPreferenceCapacity = 0;
+        this.currentSearchItemsPrepared = false;
+    }
+
+    private void switchCurrentTab(ResourceLocation id) {
+        if (id.equals(this.currentTabId)) {
+            return;
+        }
+        this.currentTabId = id;
+        this.currentTabType = this.tabs.get(requireTabIndex(id)).type();
+        this.selectedItemIndices.clear();
+        invalidatePreparedSearchItems();
+    }
+
+    private static boolean sameStackOrder(List<ItemStack> left, List<ItemStack> right) {
+        if (left.size() != right.size()) {
+            return false;
+        }
+        for (int index = 0; index < left.size(); index++) {
+            if (!ItemStack.isSameItemSameTags(left.get(index), right.get(index))) {
+                return false;
+            }
+        }
+        return true;
     }
 
     private void replaceCurrentItems(CreativeTabDefinition expected, List<ItemStack> items) {
@@ -593,7 +860,7 @@ public final class CreativeTabDraft {
         for (int index = 0; index < uniqueSearchItems.size(); index++) {
             ItemStack searchItem = uniqueSearchItems.get(index);
             if (matchesAny(searchItem, replaced)
-                    || ItemStack.isSameItemSameComponents(searchItem, normalized)) {
+                    || ItemStack.isSameItemSameTags(searchItem, normalized)) {
                 if (index < anchor) {
                     removedBeforeAnchor++;
                 }
@@ -631,7 +898,7 @@ public final class CreativeTabDraft {
 
     private static boolean matchesAny(ItemStack stack, Collection<ItemStack> candidates) {
         for (ItemStack candidate : candidates) {
-            if (ItemStack.isSameItemSameComponents(stack, candidate)) {
+            if (ItemStack.isSameItemSameTags(stack, candidate)) {
                 return true;
             }
         }
@@ -653,7 +920,7 @@ public final class CreativeTabDraft {
 
     private static int indexOfMatching(List<ItemStack> stacks, ItemStack target, int excludedIndex) {
         for (int index = 0; index < stacks.size(); index++) {
-            if (index != excludedIndex && ItemStack.isSameItemSameComponents(stacks.get(index), target)) {
+            if (index != excludedIndex && ItemStack.isSameItemSameTags(stacks.get(index), target)) {
                 return index;
             }
         }
@@ -662,7 +929,7 @@ public final class CreativeTabDraft {
 
     private static boolean removeFirstMatching(List<ItemStack> candidates, ItemStack stack) {
         for (int index = 0; index < candidates.size(); index++) {
-            if (ItemStack.isSameItemSameComponents(candidates.get(index), stack)) {
+            if (ItemStack.isSameItemSameTags(candidates.get(index), stack)) {
                 candidates.remove(index);
                 return true;
             }
@@ -677,9 +944,9 @@ public final class CreativeTabDraft {
         }
     }
 
-    private Set<Identifier> checkedIds(Collection<Identifier> ids) {
-        LinkedHashSet<Identifier> checked = new LinkedHashSet<>();
-        for (Identifier id : ids) {
+    private Set<ResourceLocation> checkedIds(Collection<ResourceLocation> ids) {
+        LinkedHashSet<ResourceLocation> checked = new LinkedHashSet<>();
+        for (ResourceLocation id : ids) {
             checked.add(requireExistingId(id));
         }
         return checked;
@@ -695,16 +962,16 @@ public final class CreativeTabDraft {
         return checked;
     }
 
-    private Identifier requireExistingId(Identifier id) {
-        Identifier checked = requireId(id);
+    private ResourceLocation requireExistingId(ResourceLocation id) {
+        ResourceLocation checked = requireId(id);
         if (indexOf(checked) < 0) {
             throw new IllegalArgumentException("Unknown creative tab id: " + checked);
         }
         return checked;
     }
 
-    private int requireTabIndex(Identifier id) {
-        Identifier checked = requireId(id);
+    private int requireTabIndex(ResourceLocation id) {
+        ResourceLocation checked = requireId(id);
         int index = indexOf(checked);
         if (index < 0) {
             throw new IllegalArgumentException("Unknown creative tab id: " + checked);
@@ -712,7 +979,7 @@ public final class CreativeTabDraft {
         return index;
     }
 
-    private int indexOf(Identifier id) {
+    private int indexOf(ResourceLocation id) {
         for (int index = 0; index < this.tabs.size(); index++) {
             if (this.tabs.get(index).id().equals(id)) {
                 return index;
@@ -721,7 +988,7 @@ public final class CreativeTabDraft {
         return -1;
     }
 
-    private static Identifier requireId(Identifier id) {
+    private static ResourceLocation requireId(ResourceLocation id) {
         return Objects.requireNonNull(id, "id");
     }
 
@@ -747,7 +1014,7 @@ public final class CreativeTabDraft {
 
     private static List<ItemStack> copyStacks(List<ItemStack> stacks) {
         List<ItemStack> copies = new ArrayList<>(stacks.size());
-        Set<ItemStack> unique = ItemStackLinkedSet.createTypeAndComponentsSet();
+        Set<ItemStack> unique = ItemStackLinkedSet.createTypeAndTagSet();
         for (ItemStack stack : stacks) {
             ItemStack copy = normalizeStack(stack);
             if (unique.add(copy)) {
@@ -755,6 +1022,9 @@ public final class CreativeTabDraft {
             }
         }
         return copies;
+    }
+
+    private record IndexedSearchPreference(int originalIndex, ItemStack stack) {
     }
 
     private static CreativeTabDefinition copyDefinition(CreativeTabDefinition definition, int order) {
